--- a/my-app/src/components/Select/Select.module.css
+++ b/my-app/src/components/Select/Select.module.css
@@ -1,5 +1,8 @@
-.select {
-    border: 1px solid black
+.select span.main {
+    border: 1px solid black;
+    display: inline-block;
+    min-height: 20px;
+    min-width: 40px;
 }
 
 .items {
@@ -7,4 +10,11 @@
     position: absolute;
     padding: 5px;
     border: 1px solid black;
+    color: red;
+    background-color: black;
+}
+
+.item.selected {
+    background-color: red;
+    color:black;
 }
