--- a/my-app/src/components/Select/Select.module.css
+++ b/my-app/src/components/Select/Select.module.css
@@ -10,11 +10,9 @@
     position: absolute;
     padding: 5px;
     border: 1px solid black;
-    color: red;
-    background-color: black;
 }
 
 .item.selected {
-    background-color: red;
-    color:black;
+    background-color: blue;
+    color:white;
 }
