--- a/my-app/src/components/Select/Select.module.css
+++ b/my-app/src/components/Select/Select.module.css
@@ -2,17 +2,22 @@
     border: 1px solid black;
     display: inline-block;
     min-height: 20px;
-    min-width: 40px;
+    min-width: 70px;
 }
 
 .items {
     /*контент накладывается сверху не отодвигая другие элементы*/
     position: absolute;
     padding: 5px;
-    border: 1px solid black;
+    border: 1px inherit;
+    border-radius: 5px;
+    background: linear-gradient(90deg,green,red);
+    min-width: 70px;
 }
 
 .item.selected {
-    background-color: blue;
+    background: linear-gradient(90deg, red, green);
     color:white;
+    border-radius: 5px;
+    font-family: "Bauhaus 93";
 }
